--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<div id="wrapper">
 				<!-- Header -->
 					<header id="header">
-						<div class="logo" style="padding-top: 15px;" >
-							<img src="images/departures.svg" width="60" height="60"/>
+						<div class="logo" >
+							<!-- <img src="images/departures.svg" width="60" height="60"/> -->
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -31,7 +31,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#privacy">About</a></li>
+								<li><a href="#privacy">Policy</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
