--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Copyright © 2020 TravelXpense. All rights reserved.</p>
 					</footer>
 
 			</div>
