--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/intro.jpg" alt="" height="120"/></span>
 								<p>The app helps you recording your expense while traveling.</p>
 							</article>
 
