--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.jpg" alt="" /></span>
-								<p>The app helps you recording your expense while traveling.</p>
+								<p>The app helps you record your expense while traveling.</p>
 							</article>
 
 						<!-- License -->
