--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
 								<h2 class="major">License</h2>
 								<p><a href="#SwiftEntryKit"><strong>SwiftEntryKit</strong></a></p>
 								<p><a href="#Charts"><strong>Charts</strong></a></p>
+								<p><a href="#FMDB"><strong>FMDB</strong></a></p>
 								<p><a href="#IsoCountryCodes"><strong>IsoCountryCodes</strong></a></p>
+								<p><a href="#ExchangeRate"><strong>Exchange rate API</strong></a></p>
 								<p>
 									<div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 								</p>
 								<p>
 									<div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 								</p>
+					
 							</article>
 
 							<article id="SwiftEntryKit">
@@ -305,6 +308,43 @@
 			See the License for the specific language governing permissions and
 			limitations under the License.
 								</P>
+							</article>
+							<article id="FMDB">
+								<p><a href="https://github.com/ccgus/fmdb">
+									<strong>https://github.com/ccgus/fmdb</strong></a></p>
+									If you are using FMDB in your project, I'd love to hear about it.  Let Gus know
+									by sending an email to gus@flyingmeat.com.<br><br>
+
+									And if you happen to come across either Gus Mueller or Rob Ryan in a bar, you
+									might consider purchasing a drink of their choosing if FMDB has been useful to
+									you.<br><br>
+
+									Finally, and shortly, this is the MIT License.<br><br>
+
+									Copyright (c) 2008-2014 Flying Meat Inc.<br><br>
+
+									Permission is hereby granted, free of charge, to any person obtaining a copy
+									of this software and associated documentation files (the "Software"), to deal
+									in the Software without restriction, including without limitation the rights
+									to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+									copies of the Software, and to permit persons to whom the Software is
+									furnished to do so, subject to the following conditions:<br><br>
+
+									The above copyright notice and this permission notice shall be included in
+									all copies or substantial portions of the Software.<br><br>
+
+									THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+									IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+									FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+									AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+									LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+									OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+									THE SOFTWARE.
+							</article>
+							<article id="ExchangeRate">
+								<p>Exchange rate API service provided by RTER.info</p>
+								<a href="https://tw.rter.info">
+									<strong>https://tw.rter.info</strong></a>
 							</article>
 							<article id="IsoCountryCodes">
 								<a href="https://github.com/funky-monkey/IsoCountryCodes">
