--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<p><a href="https://apps.apple.com/tw/app/travelxpense-%E6%97%85%E8%A1%8C%E8%A8%98%E5%B8%B3-%E6%99%BA%E5%B8%B3%E6%97%85%E8%A1%8C/id1541175260"><strong>Download on App Store</strong></a></p>
 						<p class="copyright">Copyright &copy; 2020 TravelXpense. All rights reserved.</p>
 					</footer>
 
